tests/snapshots/integration__git_test__git.snap
---
source: tests/git_test.rs
assertion_line: 6
expression: output

---
RUN
git -h

STDOUT
exit 1

STDERR
git 2.17.1
nobody <nobody@example.com>
A fictional versioning CLI

USAGE:
    git [OPTIONS] [SUBCOMMAND]

OPTIONS:
        --git-dir <GIT-DIR>    
    -h, --help                 Print help information
        --no-pager             
    -p, --paginate             
    -V, --version              Print version information

SUBCOMMANDS:
    add     Add file contents to the index
    help    Print this message or the help of the given subcommand(s)
    log     Shows the commit log.
    push    Update remote refs along with associated objects


