tests/snapshots/integration__git_test__git_add.snap
---
source: tests/git_test.rs
assertion_line: 10
expression: output

---
RUN
git add -h

STDOUT
exit 1

STDERR
git-add 
Add file contents to the index

USAGE:
    git add [OPTIONS] [PATHSPEC]...

ARGS:
    <PATHSPEC>...    Files to add content from.

OPTIONS:
    -h, --help       Print help information
    -n, --dry-run    Don’t actually add the file


