tests/snapshots/integration__git_test__git_log.snap
---
source: tests/git_test.rs
assertion_line: 20
expression: output

---
RUN
git log -h

STDOUT
exit 1

STDERR
git-log 
Shows the commit log.

USAGE:
    git log [OPTIONS] [--] [REFSPEC]...

ARGS:
    <REFSPEC>...    Specify what destination ref to update with what source object.

OPTIONS:
        --decorate <DECORATE>    If no --decorate-refs is given, pretend as if all refs were
                                 included. [default: short] [possible values: short, full, auto, no]
        --follow                 Continue listing the history of a file beyond renames
        --grep <REGEX>...        Limit the commits output to ones with log message that matches the
                                 specified pattern
    -h, --help                   Print help information


